src/test/resources/examples/invalid/GridPaneStaticPropertyElementMultipleValues.fxml
<?import javafx.scene.control.Label?>
<?import javafx.scene.layout.GridPane?>
<?import java.lang.Integer?>
<GridPane xmlns:fx="http://javafx.com/fxml">
    <children>
        <Label text="My Label">
            <GridPane.rowIndex>
                <Integer fx:value="0"/>
                <Integer fx:value="0"/>
            </GridPane.rowIndex>
            <GridPane.columnIndex>
                <Integer fx:value="0"/>
            </GridPane.columnIndex>
        </Label>
    </children>
</GridPane>
